# crunpyroll

./: .gitignore  DOCKER_INSTALL_SOLUTIONS.md  Dockerfile.test  MANIFEST.in  README.md  install_docker.py  pyproject.toml  setup.py
crunpyroll/: __init__.py  client.py  session.py  utils.py
crunpyroll.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crunpyroll/methods/: __init__.py  get_manifest.py  get_streams.py
crunpyroll/types/: episodes.py  manifest.py
